# bridge-core-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bridge_core_py/: __main__.py  assistant.py  auto_enum.py  az_network.py  bids.py  bridge_v1.pkl  cards.py  core.py  interactive.py  player.py
bridge_core_python/: auto_enum.py  bids.py  cards.py  core.py  player.py
game/: __main__.py  interactive_game.py
tests/: test_bids.py  test_dummy.py  test_game_bidding.py  test_game_example_play.py  test_game_playing.py  test_hands_to_str.py  test_player.py
