[tool.poetry]
name = "bridge-core-python"
version = "0.1.0"
description = ""
authors = ["Szymon Idec <szymon.idec@protonmail.com>"]
readme = "README.md"
packages = [{include = "bridge_core_python"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
