[tool.poetry]
name = "bridge-core-py"
version = "0.1.1"
description = ""
authors = [
    "Szymon Idec <szymon.idec@protonmail.com>",
    "Jakub Karbowski <carbon225@proton.me>"
]
readme = "README.md"
packages = [{include = "bridge_core_py"}]


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.20"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.0.284"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
